--- a/_sass/minimal-mistakes/_syntax.scss
+++ b/_sass/minimal-mistakes/_syntax.scss
@@ -6,10 +6,10 @@ div.highlighter-rouge,
 figure.highlight {
   position: relative;
   margin-bottom: 1em;
-  background: $base00;
-  color: $base05;
+  background: $lighter-gray;
+  color: $base00;
   font-family: $monospace;
-  font-size: $type-size-6;
+  font-size: $type-size-8;
   line-height: 1.8;
   border-radius: $border-radius;
 
